Fix: show right dropdown on mobile

--- a/src/assets/less/header.less
+++ b/src/assets/less/header.less
@@ -123,7 +123,8 @@ a.nav-device {
 .header .right {
   float: right;
   @media (max-width: @medium-size) {
-    display: none;
+    width: 55%;
+    text-align: right;
   }
 }
 
